    - Closes #5521.
  - Fix aborted teleports not refunding the spawn travel cost.
    - Closes #5526.
  - Add INK_SAC and GLOW_INK_SAC to ItemLists list of Dyes, to prevent them being used on Signs.
  - Automatic Config Update: 
    - RESPAWN_ANCHOR will be added to new_world_settings.plot_management.wild_revert_on_block_explosion.blocks,
    - Their explosions will be reverted in new worlds.
    - Your world files will also have it added, meaning existing worlds with block explosion revert set to on will start reverting Respawn Anchor explosions.
  - Make /ta set mayor TOWNNAME NPC be more careful about setting the NPC-run towns to have no upkeep.
  - Fix Title/Subtitles not showing when entering/exiting a town.
    - Closes #5532.
  - Translate Console givebonus warning, courtesy of GNosii with PR #5514.
  - Option to show what nation you're joining when you are invited to join a town, courtesy of AlessioGr with PR #5530. (First-Time Contributor!)
0.97.5.3:
  - New Permission Node: towny.command.nation.default
    - A collection of nation sub commands which are given to everyone by default.
      - Each node doesn't do anything as there are further subcommands with more permission tests.
    - Fixes complicated townyperms setups not handling nation command refactor 0.97.3.2.
  - New Placeholder: %townyadvanced_player_location_plotgroup_name%
    - Shows the PlotGroup name if the player location has a PlotGroup.
    - Closes #5539.
  - Fix the default public town setting not being used.
  - Fix a typo in a lang key use, courtesy of Warriorrrr with PR #5540.
  - Allow economy.new_expand.price_claim_townblock_refund to be negative, meaning towns will be charged money to unclaim land.
    - Closes #3650.
  - Prevent the theft of axolotls, courtesy of Warriorrrr with PR #5542.
  - Fix minecart names in ItemLists, courtesy of Warriorrrr with PR #5546.
  - Fix ChorusFlowers not being protected from projectiles.