@@ -7084,3 +7084,4 @@ v0.92.0.11:
   - Prevent the theft of axolotls, courtesy of Warriorrrr with PR #5542.
   - Fix minecart names in ItemLists, courtesy of Warriorrrr with PR #5546.
   - Fix ChorusFlowers not being protected from projectiles.
+  - Fix transfering the last plot from a plotgroup into another leaving an empty plotgroup, vulnerable to errors.
